--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "^2.22.1",
     "react-native-modal": "^13.0.1",
+    "react-native-otp-entry": "^1.8.2",
     "react-native-reanimated": "^3.16.7",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.6.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^15.11.1",
+    "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "^13.13.2",
     "react-redux": "^9.2.0",
