--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^15.11.1",
     "react-native-swiper": "^1.6.0",
+    "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "^13.13.2",
     "react-redux": "^9.2.0",
