--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-native": "0.77.0",
+    "react-native-animatable": "^1.4.0",
     "react-native-autoheight-webview": "^1.6.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-fast-image": "^8.6.3",
     "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "^2.23.1",
-    "react-native-modal": "^13.0.1",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-otp-entry": "^1.8.2",
     "react-native-reanimated": "^3.16.7",
     "react-native-reanimated-carousel": "^4.0.2",
