--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.6.0",
+    "react-native-skeletons": "^1.3.6",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^15.11.1",
     "react-native-swiper": "^1.6.0",
