--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-fast-image": "^8.6.3",
     "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "^2.23.1",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-otp-entry": "^1.8.2",
     "react-native-reanimated": "^3.16.7",
