--- a/ios/AxioLife/Info.plist
+++ b/ios/AxioLife/Info.plist
@@ -49,6 +49,7 @@
 	<false/>
 	<key>UIAppFonts</key>
 	<array>
+	    <string>Ionicons.ttf</string>
 		<string>Mulish-Bold.ttf</string>
 		<string>Mulish-ExtraBold.ttf</string>
 		<string>Mulish-ExtraLight.ttf</string>
